test/Fail/UselessAbstractAbstract.agda
{-# OPTIONS --warning=error #-}

module UselessAbstractAbstract where

A : Set₁
abstract
  abstract
    A = Set
